Agregado servicios que envían correos en caso de completar la subida masiva o fallo

--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ CRON_TIME_PATTERN_MASSIVE_UPLOAD = '*/15 * * * * *'
 # Fecha de fin de la subida de audios inicial masiva
 # Formato: 'YYYYMMDD'
 END_UPLOAD_DATE='20240101'
+
+EMAIL_SERVICE = 'Gmail'
+
+EMAIL_USER = 'elmogof@outlook.com'
+
+EMAIL_PASSWORD = 'Sumfpoutlook540'
+
+EMAIL_TO = 'elmogof@gmail.com'
