--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knox": "^0.9.2",
+    "nodemailer": "^6.9.14",
     "tree-kill": "^1.2.2"
   },
   "devDependencies": {
