Host y Port pasan a consumirse desde el archivo env

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ EMAIL_USER = 'elmogof@outlook.com'
 EMAIL_PASSWORD = 'Sumfpoutlook540'
 
 EMAIL_TO = 'elmogof@gmail.com'
+
+EMAIL_HOST = 'smtp-mail.outlook.com'
+
+EMAIL_PORT = '587'
